changed p selector element to green background, white text, and a font size of 18px

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -8,7 +8,9 @@
     <title>Methods for Adding CSS</title>
     <style>
       p{
-        
+        background-color: green;
+        color: white;
+        font-size: 18px;
       }
     </style>
   </head>
